--- a/style.css
+++ b/style.css
@@ -1,20 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Young+Serif&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Young+Serif&display=swap');
 
-:root{
+:root {
     --titles-font: "Young Serif", serif;
     --rest-font: "Roboto", sans-serif;
 }
 
-body{
+body {
     width: 100%;
     height: 100%;
     margin: 0;
     min-width: 20rem;
     min-height: 100vh;
 }
-@media (min-width:320px){
-    html{
+
+@media (min-width:320px) {
+    html {
         width: 100%;
         height: 100%;
         margin: 0;
@@ -22,7 +23,8 @@ body{
         min-height: 100vh;
     }
 }
-.header{
+
+.header {
     height: auto;
     width: 100%;
     display: flex;
@@ -32,24 +34,26 @@ body{
     position: sticky;
     top: 0;
 }
-header ul{
+
+header ul {
     list-style: none;
     display: flex;
     justify-content: center;
     gap: 1rem;
     text-decoration: none;
 }
-header ul a{
+
+header ul a {
     text-decoration: none;
 }
 
-header ul li{
+header ul li {
     color: black;
 }
-.container{ 
-    font-family:var(--titles-font);
+
+.container {
+    font-family: var(--titles-font);
     background-position: 80%;
-    margin: 4% 20% 30% 20%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -58,7 +62,7 @@ header ul li{
     gap: 5%;
 }
 
-section#hero img:first-of-type{
+section#hero img:first-of-type {
     position: absolute;
     inset: 0;
     width: 100%;
@@ -66,7 +70,7 @@ section#hero img:first-of-type{
     z-index: -10;
 }
 
-section#hero div.overlay{
+section#hero div.overlay {
     position: absolute;
     inset: 0;
     width: 100%;
@@ -75,28 +79,35 @@ section#hero div.overlay{
     z-index: -5;
 }
 
-section#hero div.container{
+section#hero div.container {
     position: relative;
     z-index: 0;
     display: flex;
-    justify-content:center ;
+    justify-content: center;
     align-items: center;
     gap: 1rem;
     margin: 1rem;
     width: 100%;
     height: auto;
-    max-width: 400px;
     margin-inline: auto;
 }
 
-section#hero{
+section#hero {
     border: 1px solid black;
 }
 
-.box{
+.box {
     margin: 1rem;
 }
 
-#sec1 #header{
+#sec1 #header {
     font-family: var(--rest-font);
 }
+
+#hero2 .flex{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+}
+
