--- a/style.css
+++ b/style.css
@@ -140,10 +140,9 @@ section#hero {
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
+        margin-top: 10px;
     }
-    .one .two {
-        margin: 0px 10px 0 10px;
-    }
+    
 }
 
 @media (min-width:720px){
