--- a/style.css
+++ b/style.css
@@ -128,13 +128,15 @@ section#hero {
     body{
         max-width: 100vw;
     }
+    #header{
+        margin-right: 25px;
+    }
     #hero2 img{
         margin-left: -25px;
     }
     .name{
-        
-        margin-left: -31px;
-        
+        margin-left: -33px;
+        padding: 0px;
     }
     .overlay{
         min-width: 150%;
@@ -150,7 +152,7 @@ section#hero {
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
-        margin-top: 33px;
+        margin-top: 32px;
         background-color: var(--overlay);
         height: 250%;
     }
