--- a/style.css
+++ b/style.css
@@ -61,6 +61,8 @@ header ul li {
     align-items: start;
     align-content: flex-start;
     gap: 5%;
+    width: 100%;
+    height: 100%;
 }
 
 section#hero img:first-of-type {
@@ -112,6 +114,7 @@ section#hero {
 }
 
 #hero2 .flex{
+    
     display: flex;
     align-items: center;
     justify-content: center;
@@ -122,6 +125,8 @@ section#hero {
 
 #hero2 img{
     border: 1px solid;
+    height: 300px;
+    width: 230px;
 }
 
 @media (min-width:320px){
@@ -151,7 +156,7 @@ section#hero {
         flex-wrap: wrap;
         margin-top: 32px;
         background-color: var(--overlay);
-        height: 265%;
+        height: 100%;
     }
     #Research p{
         background-color: white;
