--- a/style.css
+++ b/style.css
@@ -160,7 +160,6 @@ section#hero {
         margin: 10px;
         padding: 10px;
     }
-    
 }
 
 @media (min-width:720px){
@@ -183,7 +182,8 @@ section#hero {
         align-content: start;
         justify-content: center;
         column-gap: 8rem;
-        margin-top: 166px;
+     /*   margin-top: 166px;
+*/      margin-top: 166px;
         grid-template-rows: 2rem;
         grid-template-columns: 33% 33% ;
         grid-template-areas: "two one one";
