--- a/style.css
+++ b/style.css
@@ -83,14 +83,7 @@ section#hero div.container {
     height: auto;
     margin-inline: auto;
 }
-#Research{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-top: 146px;
-    background-color: var(--overlay);
-    height: 110%;
-}
+
 
 section#hero {
     border: 1px solid black;
@@ -160,6 +153,9 @@ section#hero {
         margin: 10px;
         padding: 10px;
     }
+    #Research .one{
+        margin-top: 10px;
+    }
 }
 
 @media (min-width:720px){
@@ -182,8 +178,7 @@ section#hero {
         align-content: start;
         justify-content: center;
         column-gap: 8rem;
-     /*   margin-top: 166px;
-*/      margin-top: 66px;
+        margin-top: 166px;
         grid-template-rows: 2rem;
         grid-template-columns: 33% 33% ;
         grid-template-areas: "two one one";
