--- a/style.css
+++ b/style.css
@@ -153,9 +153,7 @@ section#hero {
         margin: 10px;
         padding: 10px;
     }
-    #Research .one{
-        margin-top: -150px;
-    }
+   
 }
 
 @media (min-width:720px){
@@ -179,9 +177,14 @@ section#hero {
         justify-content: center;
         column-gap: 8rem;
         margin-top: 166px;
-        grid-template-rows: 2rem;
+        grid-row: 2;
+        grid-column-start: end;
+        grid-column: auto;
+        grid-template-rows: auto;
         grid-template-columns: 33% 33% ;
-        grid-template-areas: "two one one";
+        grid-template-areas:
+         "one two"
+         "three four";
     }
 
     .header {
