--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ section#hero {
         padding: 10px;
     }
     .one, .two, .three, .four{
-        max-height: auto;
+        height: auto;
     }
    
 }
