--- a/style.css
+++ b/style.css
@@ -156,6 +156,12 @@ section#hero {
     .one{
         height: 490px;
     }
+    .two{
+        height: 490px;
+    }
+    .three{
+        height: 700px;
+    }
    
 }
 
