--- a/style.css
+++ b/style.css
@@ -160,7 +160,10 @@ section#hero {
         height: 490px;
     }
     .three{
-        height: 800px;
+        height: 850px;
+    }
+    .four{
+        height: 90px;
     }
    
 }
