--- a/style.css
+++ b/style.css
@@ -150,7 +150,9 @@ section#hero {
     #Research p{
         background-color: white;
         border: 1px solid;
-        margin: 10px;
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-bottom: 10px;
         padding: 10px;
     }
     .one{
