--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ section#hero {
     #Research p{
         background-color: white;
         border: 1px solid;
-        
+        margin: 10px;
         padding: 10px;
     }
     .one{
