--- a/style.css
+++ b/style.css
@@ -5,36 +5,45 @@
     --titles-font: "Young Serif", serif;
     --rest-font: "Roboto", sans-serif;
     --overlay: #0000004f;
+    --second: #3333334f;
+}
+
+html,
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-    width: 120%;
-    height: 100%;
-    margin: 0;
-    min-width: 20rem;
-    min-height: 100vh;
+    position: relative;
 }
 
-@media (min-width:320px) {
-    html {
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        min-width: 20rem;
-        min-height: 100vh;
-    }
+header {
+    position: sticky;
+    top: 0;
+    background-color: white;
 }
 
 header ul {
-    list-style: none;
     display: flex;
     justify-content: center;
     gap: 1rem;
-    text-decoration: none;
+    padding: 0.75rem 1rem;
+    border-bottom: solid 1px;
 }
 
 header ul a {
     text-decoration: none;
+    color: black;
+    text-decoration: underline;
 }
 
 header ul li {
@@ -119,9 +128,7 @@ section#hero {
     body{
         max-width: 100vw;
     }
-    #header{
-        margin-right: 25px;
-    }
+   
     #hero2 img{
         margin-left: -15px;
         height: 180px;
@@ -141,11 +148,10 @@ section#hero {
     
     #Research{
         display: flex;
-        justify-content: center;
         flex-wrap: wrap;
         margin-top: 146px;
-        background-color: var(--overlay);
-        height: 470%;
+        background-color: var(--second);
+        height: auto;
     }
     #Research p{
         background-color: white;
@@ -154,19 +160,37 @@ section#hero {
         padding: 10px;
     }
     .one{
-        height: 490px;
+        height: auto;
     }
     .two{
-        height: 490px;
+        height: auto;
+        margin-top: -500px;
     }
     .three{
-        height: 875px;
+        height: auto;
     }
     .four{
-        height: 70px;
+        height: auto;
     }
    
+    #Content{
+        display: flex;
+        flex-wrap: wrap;
+        background-color: var(--second);
+        height: auto;
+        justify-content: center;
+        align-items: end;
+        
+    }
+    #Content p{
+        background-color: white;
+        border: 1px solid;
+        margin: 10px;
+        padding: 10px;
+        max-width: 50% ;
+        font-size: larger;
 }
+    
 
 @media (min-width:720px){
 
@@ -241,3 +265,4 @@ section#hero {
 
 
 
+}
