--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+:root {
+    --max-width: 80rem;
+    --padding: clamp(2rem, 8vw, 8rem) 1rem 0;
+}
+
+
 html, body{
     height: 100%;
     width: 100%;
@@ -55,6 +61,8 @@ h1{
     margin-top: 45rem;
     height: 100vh;
     width: 100vw;
+    max-width: var(--max-width);
+    margin-inline: auto;
 }
 
 
@@ -65,6 +73,8 @@ h1{
     background-color: rgba(255, 255, 255, 0.8);
     overflow-x: hidden;
     height: fit-content;
+    max-width: var(--max-width);
+    margin-inline: auto;
 }
 
 
@@ -74,6 +84,8 @@ h1{
     display: flex;
     justify-content: start;
     column-gap: 24rem;
+    max-width: var(--max-width);
+    margin-inline: auto;
 }
 
 .second{
@@ -113,6 +125,7 @@ h1{
 #resources{
     display: flex;
     justify-content: center;
+    padding: var(--padding);
 }
 
 
